styles.css
.password_modal {
	max-width: 480px;
}

.password_modal h1 {
	text-align: center;
}

.password_modal .password_input {
	width: 100%;
	margin: 25px 0 10px 0;
	height: 40px;
	font-size: 20px;
}

.app-container__lock_password {
	filter: blur(15px);
	z-index: -1;
}

.password_modal__warning {
	color: rgb(var(--callout-warning));
}

.password_modal__alert {
	color: rgb(var(--callout-error));
}

.password_modal__box {
	display: flex;
	flex-direction: column;
	margin-top: 35px;
}

.password_modal__box input {
	margin-bottom: 15px;
	height: 35px;
	font-size: 15px;
}

.password_modal__icon {
	display: inline-block;
}

.shake_anim {
	animation: shake 0.2s;
	animation-direction: alternate;
}

.blur {
	animation: blur 0.3s;
}

@keyframes blur {
	from {
		filter: blur(15px);
	}

	to {
		filter: blur(0px);
	}
}

.nav-file-title.is-encrypted .nav-file-title-content::after {
	content: " 🔒";
	font-size: 0.85em;
	opacity: 0.7;
}

.nav-file-title.is-encrypted {
	opacity: 0.85;
}

@keyframes shake {
	0% {
		transform: translate(1px, 1px) rotate(0deg);
	}
	10% {
		transform: translate(-1px, -2px) rotate(-1deg);
	}
	20% {
		transform: translate(-3px, 0px) rotate(1deg);
	}
	30% {
		transform: translate(3px, 2px) rotate(0deg);
	}
	40% {
		transform: translate(1px, -1px) rotate(1deg);
	}
	50% {
		transform: translate(-1px, 2px) rotate(-1deg);
	}
	60% {
		transform: translate(-3px, 1px) rotate(0deg);
	}
	70% {
		transform: translate(3px, 1px) rotate(-1deg);
	}
	80% {
		transform: translate(-1px, -1px) rotate(1deg);
	}
	90% {
		transform: translate(1px, 2px) rotate(0deg);
	}
	100% {
		transform: translate(1px, -2px) rotate(-1deg);
	}
}

